# near-bridge

./: .gitignore  Cargo.toml  README.md  build.sh  deploy.sh
bridge/: Cargo.toml
bridge/src/: errors.rs  internal.rs  lib.rs  token_receiver.rs  utils.rs
test/: deploy.js  package.json  shieldtests.js  shieldtokentests.js  withdrawtests.js
