[package]
name = "near-bridge"
version = "0.0.2"
authors = ["Thactb <thach4567@gmail.com>"]
edition = "2018"

[dependencies]
near-sdk = "3.1.0"
near-sdk-sim = "3.2.0"
near-contract-standards = "3.1.1"

# remember to include a line for each contract
near-bridge = { path = "./bridge" }

[profile.release]
codegen-units = 1
# Tell `rustc` to optimize for small code size.
opt-level = "z"
lto = true
debug = false
panic = "abort"
overflow-checks = true

[workspace]
# remember to include a member for each contract
members = [
  "bridge"
]
